--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
   "buildCommand": "npm install && npm run build",
-  "outputDirectory": "dist",
-  "nodeVersion": "20.x"
+  "outputDirectory": "dist"
 }
